# storage/api-docs/api-docs.json
@@ -202,6 +202,304 @@
                 }
             }
         },
+        "/api/Seasons/{season}/Event/matches": {
+            "get": {
+                "tags": [
+                    "Match"
+                ],
+                "description": "get all matches in specific season",
+                "operationId": "GET_ALL_matches",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "season",
+                        "in": "path",
+                        "description": "season ID",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "SUCCESSFULLY DONE"
+                    },
+                    "401": {
+                        "description": "Bad request"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Match"
+                ],
+                "description": "post Create matche form ",
+                "operationId": "POST_Create_matches",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "season",
+                        "in": "path",
+                        "description": "season ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/match_creation"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "SUCCESSFULLY DONE"
+                    },
+                    "401": {
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
+        "/api/Seasons/{season}/Event/update-match/{match}": {
+            "put": {
+                "tags": [
+                    "Match"
+                ],
+                "description": "put update matche ",
+                "operationId": "Put_Update_matche",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "season",
+                        "in": "path",
+                        "description": "season ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "match",
+                        "in": "path",
+                        "description": "match ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/match_update"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "SUCCESSFULLY DONE"
+                    },
+                    "401": {
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
+        "/api/Seasons/{season}/Event/delete-match/{match}": {
+            "delete": {
+                "tags": [
+                    "Match"
+                ],
+                "summary": "Remove Match from database",
+                "operationId": "deleteMatch",
+                "parameters": [
+                    {
+                        "name": "season",
+                        "in": "path",
+                        "description": "season ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "match",
+                        "in": "path",
+                        "description": "match ID",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success"
+                    },
+                    "401": {
+                        "description": "error"
+                    }
+                }
+            }
+        },
+        "/api/Seasons/{season}/Event/matches/stage/{stage_id}": {
+            "get": {
+                "tags": [
+                    "Match"
+                ],
+                "description": "get all matches in specific season in specific stage",
+                "operationId": "GET_ALL_matches_stage",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "season",
+                        "in": "path",
+                        "description": "season ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "stage_id",
+                        "in": "path",
+                        "description": "stage ID",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "SUCCESSFULLY DONE"
+                    },
+                    "401": {
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
+        "/api/Seasons/{season}/Event/matches/{date}": {
+            "get": {
+                "tags": [
+                    "Match"
+                ],
+                "description": "get all matches in specific season in specific date",
+                "operationId": "GET_ALL_matches_by_date",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "season",
+                        "in": "path",
+                        "description": "season ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "date",
+                        "in": "path",
+                        "description": "date",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "SUCCESSFULLY DONE"
+                    },
+                    "401": {
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
+        "/api/Seasons/{season}/Event/{team}/matches": {
+            "get": {
+                "tags": [
+                    "Match"
+                ],
+                "description": "get all matches for specific team in specific season",
+                "operationId": "GET_ALL_matches_for_team",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "season",
+                        "in": "path",
+                        "description": "season ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "team",
+                        "in": "path",
+                        "description": "RegisteredTeam id",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "SUCCESSFULLY DONE"
+                    },
+                    "401": {
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
+        "/api/matches/today": {
+            "get": {
+                "tags": [
+                    "Match"
+                ],
+                "description": "get all todays matches ",
+                "operationId": "GET_ALL_matches_today",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "SUCCESSFULLY DONE"
+                    },
+                    "401": {
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
+        "/api/Seasons/{season}/Event/matches/InProgress": {
+            "get": {
+                "tags": [
+                    "Match"
+                ],
+                "description": "get all matches inProgressed for specific season",
+                "operationId": "GET_ALL_matches_inProgressed",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "season",
+                        "in": "path",
+                        "description": "season ID",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "SUCCESSFULLY DONE"
+                    },
+                    "401": {
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
         "/api/Players/All-Players": {
             "get": {
                 "tags": [
@@ -689,6 +987,94 @@
                 "Continent_id": {
                     "type": "integer",
                     "example": "1"
+                }
+            }
+        },
+        "match_creation": {
+            "properties": {
+                "date": {
+                    "type": "string",
+                    "example": "2017-12-17"
+                },
+                "time": {
+                    "type": "string",
+                    "example": "01:00:00"
+                },
+                "stage_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "team_1_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "team_2_id": {
+                    "type": "integer",
+                    "example": 2
+                },
+                "stadium": {
+                    "type": "string",
+                    "example": "Ahly stadium"
+                }
+            }
+        },
+        "match_update": {
+            "properties": {
+                "stage_id": {
+                    "type": "integer",
+                    "example": 4
+                },
+                "group_round_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "group_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "status": {
+                    "type": "string",
+                    "example": "played"
+                },
+                "register_team_1_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "register_team_2_id": {
+                    "type": "integer",
+                    "example": 2
+                },
+                "date": {
+                    "type": "string",
+                    "example": "2017-12-17"
+                },
+                "time": {
+                    "type": "string",
+                    "example": "01:00:00"
+                },
+                "stadium": {
+                    "type": "string",
+                    "example": "Ahly stadium"
+                },
+                "team_1_goals": {
+                    "type": "integer",
+                    "example": 5
+                },
+                "team_2_goals": {
+                    "type": "integer",
+                    "example": 4
+                },
+                "winner_id": {
+                    "type": "integer",
+                    "example": 2
+                },
+                "red_cards": {
+                    "type": "integer",
+                    "example": 0
+                },
+                "yellow_cards": {
+                    "type": "integer",
+                    "example": 5
                 }
             }
         },
